# agent-parry

./: .gitignore  README.md  pyproject.toml
attacks/: payloads.yaml
config/: default_policy.yaml
src/: __init__.py  cli.py  demo.py  inspector.py  mock_server.py  models.py  policy.py  proxy.py  rule_generator.py  scanner.py  stdio_proxy.py
tests/: test_cli.py  test_inspector.py  test_mock_server.py  test_policy.py  test_proxy.py  test_scanner_track_c.py  test_stdio_proxy.py  test_wall.py
tests/fixtures/: mcp_stdio_stub.py
