[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-parry"
version = "0.1.0"
description = "AgentParry: scan, protect, and verify autonomous AI agents against prompt injection, data exfiltration, and privilege escalation."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pyyaml",
    "pydantic",
    "rich",
    "httpx",
    "json5",
]

[project.scripts]
agentparry = "src.cli:main"
agentparry-proxy = "src.proxy:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
